fixed overflow for all pages, made the headers sticky added contact us link

--- a/css/signupStyle.css
+++ b/css/signupStyle.css
@@ -1,18 +1,17 @@
-body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(../img/signup\ background.png);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
-}
-
 * {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
-
+.header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(../img/signup\ background.png);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+}
 p {
   color: #777;
   font-size: 14px;
@@ -31,6 +30,7 @@ p {
   padding: 45px;
   text-align: center;
   overflow: hidden;
+  margin-top: 200px;
 }
 
 .form-control {
@@ -156,7 +156,7 @@ p {
   width: 100%;
   height: 100%;
   background: black;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -233,19 +233,22 @@ p {
 
 /*navigation bar*/
 .sticky-header {
-  min-height: 20vh;
-  width: 100;
-  background: transparent;
+  position: fixed;
+  z-index: 2;
+  width: 90%;
+  top: 0px;
+  backdrop-filter: blur(15px);
 }
 
 nav {
   display: flex;
   padding: 2% 6%;
+  padding-bottom: 0;
   justify-content: space-between;
   align-items: center;
 }
 nav img {
-  width: 150px;
+  width: 80px;
 }
 .nav-links {
   flex: 1;
@@ -309,7 +312,7 @@ nav .fa {
   width: 80%;
   margin: auto;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 0px;
 }
 
 .icons .fa {
